--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,6 +5,9 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  background-image: url("../assets/images/medical.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .description {
@@ -97,7 +100,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
